force-app/main/default/objects/DRC_NBC_BC_Integration__c/DRC_NBC_BC_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BC Integration</label>
</CustomObject>