force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/Account_SOAP_NS__c.field-meta.xml
<CustomField>
    <fullName>Account_SOAP_NS__c</fullName>
    <label>Account_SOAP_NS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>