force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/Customer_Bank_SOAP_API__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bank_SOAP_API__c</fullName>
    <label>Customer Bank SOAP API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>