force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/Customer_BC_NS__c.field-meta.xml
<CustomField>
    <fullName>Customer_BC_NS__c</fullName>
    <label>Customer BC_NS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>