force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/customer_item_ref_endpoint__c.field-meta.xml
<CustomField>
    <fullName>customer_item_ref_endpoint__c</fullName>
    <label>customer item ref endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>