force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/CustomerItemRef_BC_NS__c.field-meta.xml
<CustomField>
    <fullName>CustomerItemRef_BC_NS__c</fullName>
    <label>CustomerItemRef BC NS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>