force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/CustomerItemReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerItemReference__c</fullName>
    <label>CustomerItemReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>