force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/Customeritems_SOAP_NS__c.field-meta.xml
<CustomField>
    <fullName>Customeritems_SOAP_NS__c</fullName>
    <label>Customeritems SOAP NS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>