force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/CustomerItemSOAPEndpoint__c.field-meta.xml
<CustomField>
    <fullName>CustomerItemSOAPEndpoint__c</fullName>
    <label>CustomerItemSOAPEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>