force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Endpoint_URL__c</fullName>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>