force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_GST_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_GST_Credit_Value__c</fullName>
    <label>GST Credit Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>