force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_Password__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>