force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_SalesPerson_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_SalesPerson_Code__c</fullName>
    <label>SalesPerson Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>