force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_SendOrderEndpoint__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_SendOrderEndpoint__c</fullName>
    <label>SendOrderEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>