force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_SendOrderLineEndpoint__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_SendOrderLineEndpoint__c</fullName>
    <label>SendOrderLineEndpoint</label>
    <length>30</length>
    <type>Text</type>
</CustomField>