force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_SendSalesCommentLineEndpoint__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_SendSalesCommentLineEndpoint__c</fullName>
    <label>DRC_NBC_SendSales CommentLine Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>