force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_Shipping_Address_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipping_Address_Endpoint__c</fullName>
    <label>Shipping Address Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>