force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_Shipping_Name_Space__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipping_Name_Space__c</fullName>
    <label>Shipping Name Space</label>
    <length>255</length>
    <type>Text</type>
</CustomField>