force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_SOAP_Order_Namespace__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_SOAP_Order_Namespace__c</fullName>
    <label>SOAP Order Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>