force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/DRC_NBC_Token_Generated_Time__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Token_Generated_Time__c</fullName>
    <label>Token Generated Time</label>
    <type>DateTime</type>
</CustomField>