force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>29</length>
    <type>Text</type>
</CustomField>