force-app/main/default/objects/DRC_NBC_BC_Integration__c/fields/Soap_Address_NameSpace__c.field-meta.xml
<CustomField>
    <fullName>Soap_Address_NameSpace__c</fullName>
    <label>Soap Address NameSpace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>